# dotfiles

./: .gitignore  AGENTS.md  Makefile  Xresources  build-home-manager  cmd-key-happy.lua  gitconfig  install  install-hs  screenrc  tmux.conf  zprofile  zshenv  zshrc
bb/: git-clone
conf/: build.emacs.linux  build.emacs.osx  nginx.conf
d/: .Xdefaults  .Xmodmap  .Xresources  .cmd-key-happy.lua  .conkyrc  .dovecotrc  .ghci  .gitconfig  .ledgerrc  .mbsyncrc  .screenrc  .tmux.conf  .xinitrc
d/.boot/: profile.boot
d/.config/: home-manager  xinitrc
d/.config/ghostty/: config
d/.config/home-manager/: clojure.nix  default.nix  desktop.nix  flake.nix  home.nix  network.nix  util.nix
d/.config/nixpkgs/: home.nix
d/.fluxbox/: init  keys  startup
d/.gemini/: GEMINI.md
d/.lein/: profiles.clj
d/.puppet/: puppet.conf
d/.ssh/: rc
d/.stack/: config.yaml
d/.xmonad/: xmobarrc  xmonad.hs
etc/: dovecot.conf  redis.conf
home/: default.nix  flake.nix
home-manager/: default.nix  flake.nix
home-manager/d/: gitconfig
home/d/: xinitrc
hs/: dhcp2rootdns.hs  flines.hs
nix/: python.nix  rust.nix  zig.nix
rs/: Cargo.toml
rs/src/: dirty_git.rs  git_clone.rs  grep.rs  main.rs
vm/arch/: Vagrantfile
vm/aws/: Vagrantfile
vm/bootstrap/: ubuntu-1204.sh
vm/centos/: Vagrantfile
vm/download/: Vagrantfile
vm/es/: Vagrantfile  bootstrap
vm/puppet/: puppet.conf
vm/single/: Dockerfile  Vagrantfile
zsh.d/: 00-opts  01-env  01-fns  02-completion  03-alias  05-git  06-screen  10-completion  15-alias  20-fns  25-git  60-prompt  99-tidy  zsh.Darwin  zsh.Linux
(+32 files in other folders)
