[package]
name = "utils"
version = "0.1.0"
authors = ["Drew Raines <drew@raines.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"


[[bin]]
name = "grep"
path = "src/grep.rs"

[[bin]]
name = "dg"
path = "src/dirty_git.rs"

